[gd_scene load_steps=10 format=3 uid="uid://gr18admwqihq"]

[ext_resource type="Script" path="res://scripts/menu/intro.gd" id="1_f53t6"]
[ext_resource type="FontFile" uid="uid://csh5grfh8yukg" path="res://assets/Pixelify_Sans/PixelifySans-VariableFont_wght.ttf" id="2_ku58k"]
[ext_resource type="FontFile" uid="uid://ckqd3t1q5ltbe" path="res://assets/Pixelify_Sans/static/PixelifySans-Regular.ttf" id="2_rmav7"]
[ext_resource type="Shader" path="res://shaders/pixel_test.gdshader" id="3_wmqpx"]

[sub_resource type="LabelSettings" id="LabelSettings_mgpse"]
font_size = 48
font_color = Color(0, 0, 0, 1)
outline_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_qfiy8"]
font_size = 42
font_color = Color(0, 0, 0, 1)
outline_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_ti8g4"]
font_size = 64
font_color = Color(0, 0, 0, 1)
outline_size = 6

[sub_resource type="LabelSettings" id="LabelSettings_pg8oc"]
font = ExtResource("2_ku58k")
font_size = 24
font_color = Color(0.724643, 0.724643, 0.724643, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2qw8o"]
shader = ExtResource("3_wmqpx")
shader_parameter/pixel_size = 1.0
shader_parameter/color_range = 32.0

[node name="Intro" type="Node2D"]
script = ExtResource("1_f53t6")

[node name="Control" type="Control" parent="."]
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -432.0
offset_top = -252.0
offset_right = 432.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 48

[node name="Label" type="Label" parent="Control/VBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rmav7")
text = "THE DEVIL HAS GRANTED YOU A TRUCK"
label_settings = SubResource("LabelSettings_mgpse")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Control/VBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rmav7")
text = "USE IT"
label_settings = SubResource("LabelSettings_qfiy8")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Control/VBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rmav7")
text = "CROSS THE RIVER"
label_settings = SubResource("LabelSettings_ti8g4")
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Control/VBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rmav7")
text = "LIVE ONCE MORE"
label_settings = SubResource("LabelSettings_ti8g4")
horizontal_alignment = 1

[node name="Label" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = -104.0
offset_top = 329.0
offset_right = 111.0
offset_bottom = 359.0
text = "[ click to proceed ]"
label_settings = SubResource("LabelSettings_pg8oc")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
mouse_filter = 2
color = Color(0.205117, 0.205117, 0.205117, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 2
material = SubResource("ShaderMaterial_2qw8o")
offset_left = -937.0
offset_top = -517.0
offset_right = 983.0
offset_bottom = 563.0
mouse_filter = 2
